--- a/python23six.html
+++ b/python23six.html
@@ -58,7 +58,7 @@
 
                 <section>
                     <section>
-                        <img src="_images/AYV1X0yv.png" alt="Me" style="float:left;" class="no-border">
+                        <img src="_images/AYV1X0yv.png" alt="Me" style="float:left;width:300px;" class="no-border">
 
                         <div>
                             <ul>
@@ -66,6 +66,7 @@
                                 <li><img src="_images/logo-horizontal-claro.png" alt="CWI Software" class='no-border'>
                                 <li>@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
+                                <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
                         </div>
                     </section>
@@ -198,7 +199,7 @@ if __name__ == "__main__":
                         <h2>E Python 3?</h2>
 
                         <p><code>class Model(object):</code></p>
-                        
+
                         <p>Todas as classes são new style, mas Python 3 não
                             reclama disso.</p>
                     </section>
@@ -258,7 +259,7 @@ print('{} {}'.format(letter, count))
                         <h3>(sugestão)</h3>
 
                         <pre><code class='python'>
-print('{letter} {count}'.format(letter=letter, 
+print('{letter} {count}'.format(letter=letter,
                                 count=count))
                         </code></pre>
 
@@ -279,7 +280,7 @@ import six
 
 [...]
 
-six.print_('{letter} {count}'.format(letter=letter, 
+six.print_('{letter} {count}'.format(letter=letter,
                                      count=count))
                         </code></pre>
 
@@ -331,7 +332,7 @@ def add_querystring(url, querystring, value):
 
 if __name__ == "__main__":
     print add_querystring('http://python.org', 'doc', 'urllib')
-    print add_querystring('http://python.org?doc=urllib', 
+    print add_querystring('http://python.org?doc=urllib',
                           'page', '2')</code></pre>
                     </section>
 
@@ -358,7 +359,7 @@ def add_querystring(url, querystring, value):
 
 if __name__ == "__main__":
     six.print_(add_querystring('http://python.org', 'doc', 'urllib'))
-    six.print_(add_querystring('http://python.org?doc=urllib', 
+    six.print_(add_querystring('http://python.org?doc=urllib',
                                'page', '2'))</code></pre>
                     </section>
                 </section>
@@ -366,7 +367,7 @@ if __name__ == "__main__":
 				<section data-background='_images/thats-all-folks.jpg'>
                     <section>
                         <h1 class="fragment semi-opaque">Perguntas?</h1>
-                        <p class="fragment semi-opaque">E antes que alguém pergunte, 
+                        <p class="fragment semi-opaque">E antes que alguém pergunte,
                             é 2 <strong>*</strong>3, não 2 <strong>+</strong>3.</p>
                     </section>
 				</section>
@@ -402,4 +403,3 @@ if __name__ == "__main__":
 
     </body>
 </html>
-
