added a small summary at the end

--- a/unit-in-unittest.html
+++ b/unit-in-unittest.html
@@ -379,6 +379,20 @@ client.py      24      0   100%
                     </section>
                 </section>
 
+                <section>
+                    <h2>Resumo</h2>
+
+                    <ul>
+                        <li>Escreva testes que verifiquem requisitos, não a
+                        implementação do requisito</li>
+                        <li>Implementação pode mudar, os testes não deveriam.</li>
+                        <li>Garanta que o teste dependa apenas de si mesmo
+                        e não de outros testes.</li>
+                        <li>Use cobertura (coverage) para identificar código
+                        a ser removido, não para escrever mais testes.</li>
+                    </ul>
+                </section>
+
                 <section data-background='_images/thats-all-folks.jpg'>
                     <section>
                         <h1 class="fragment semi-opaque">Perguntas?</h1>
