more how to contribute

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -320,6 +320,29 @@
 							podemos obter o resultado esperado do teste?"
 						</aside>
 					</section>
+
+					<section>
+						<h2>O Fork</h2>
+
+						<p>
+							Quando o desenvolvedor original do projeto não tem mais
+							interesse e não quer continuar, sempre há a possbilidade
+							de ter um desenvolvimento em separado.
+						</p>
+
+						<p><small>Anedota: Jenkins, Pillow</small></p>
+					</section>
+
+					<section>
+						<h2>O Fork</h2>
+
+						<p>
+							... e há vezes que um fork, com ajuda da própria comunidade,
+							volta para o projeto original.
+						</p>
+
+						<p><small>Anedota: Compiz, GCC</small></p>
+					</section>
 				</section>
 
 				<section>
