charity is another way to help open source

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -420,6 +420,37 @@
 					<section>
 						<h1>Como Participar</h1>
 
+						<p>Doações</p>
+					</section>
+
+					<section>
+						<h2>Doações</h2>
+
+						<p>
+							Alguns projetos tem pessoas trabalhando full time e
+							precisam de alguma forma de pagar essas pessoas.
+						</p>
+
+						<p><small>Anedota: VIM, Mozilla</small></p>
+
+						<aside class="notes">
+							VIM, por exemplo, pede que se tu gostou do editor,
+							ao invés de contribuir pagando alguma coisa pro
+							Bram Moolenaar, seja feita uma doação para as
+							crianças de Uganda (a bem pouco tempo, o Bram postava,
+							no fim do ano, quanto havia sido doado).
+
+							Apesar de receber grandes doações, a Mozilla
+							precisa de doações do "99%" para que não fique
+							a mercê dos grandes doadores.
+						</aside>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h1>Como Participar</h1>
+
 						<p>Evangelização</p>
 					</section>
 
