--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>"Unit" em "Unit Tests"</title>
+        <title>A Gramática do VIM</title>
 
         <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
         <meta name="author" content="Hakim El Hattab">
@@ -108,6 +108,131 @@
 
 					<section>
 						<img src="_images/vim-help.png" alt="Ajuda">
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Gramática</h2>
+
+						<p class="fragment">Verbos</p>
+
+						<p class="fragment">Artigos</p>
+
+						<p class="fragment">Substantivos</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Substantivos</h2>
+
+						<p><small>(Começando na ordem inversa)</small></p>
+
+						<p>Substantivos são coisas. No caso de um editor, são elementos do texto. </p>
+					</section>
+
+					<section>
+						<h2>Substantivos</h2>
+
+						<p class="fragment">"Palavra"</p>
+
+						<p class="fragment">Em Inglês: "Word"</p>
+
+						<p class="fragment">
+							<strong><code>w</code></strong>
+						</p>
+					</section>
+
+					<section>
+						<h2>Substantivos</h2>
+
+						<p class="fragment">"Fim"</p>
+
+						<p class="fragment">Em Inglês: "End"</p>
+
+						<p class="fragment">
+							<strong>
+								<code>e</code>
+							</strong>
+						</p>
+					</section>
+
+					<section>
+						<h2>Pequena Pausa:</h2>
+
+						<p>O que esses dois "substantivos" fazem?</p>
+
+						<p class="fragment">Movem o cursor para o começo próxima palavra ou para o fim
+						da palavra atual (e depois para o final da próxima).</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Verbos</h2>
+
+						<p><small>(Artigos a seguir)</small></p>
+
+						<p>Verbos são ações.</p>
+					</section>
+
+					<section>
+						<h2>Verbos</h2>
+
+						<p class="fragment">"Apagar"</p>
+
+						<p class="fragment">Em Inglês: "Delete"</p>
+
+						<p class="fragment">
+							<strong><code>d</code></strong>
+						</p>
+					</section>
+
+					<section>
+						<h2>Verbos: Pequena Pausa</h2>
+
+						<p>Verbos podem ser</p>
+
+						<ul>
+							<li>Intransitivos: Não requerem um objeto -- "Chover".</li>
+							<li>Transitivos diretos: Requerem um objeto -- "Pegar"</li>
+							<li>Transitivos indiretos: Requerem objeto e uma preposição -- "Responder"</li>
+						</ul>
+
+						<p class="fragment"><small>(Quem iria esperar aulas de português numa apresentação de software livre, hein?)</small></p>
+					</section>
+
+					<section>
+						<h2>Verbos: Pequena Pausa</h2>
+
+						<p>Para o VIM, os verbos são diretos.</p>
+
+						<p class="fragment">Ou seja, é escolhida uma ação e um objeto a aplicar a ação.</p>
+
+						<p class="fragment"><small>(E ainda entram os artigos...)</small></p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Artigos</h2>
+
+						<p>Artigos são, de forma básica, modificadores de substantivos.</p>
+
+						<p>Por exemplo: "<u>Uma</u> apresentação"</p>
+					</section>
+
+					<section>
+						<h2>Artigos</h2>
+
+						<p>O VIM modifica o significado de artigos um pouco.</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Botando tudo junto</h2>
 					</section>
 				</section>
             </div>
