--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -100,14 +100,121 @@
 				<section>
 					<section>
 						<img src="_images/vim-startup.png" alt="Tela inicial do VIM">
+
+						<aside class="notes">
+							Eu vou falar um pouco sobre VIM...
+						</aside>
 					</section>
 
 					<section>
 						<img src="_images/vim-quit.png" alt="Como sair do VIM">
+
+						<aside class="notes">
+							... mas eu não pretendo falar de comandos específicos...
+						</aside>
 					</section>
 
 					<section>
 						<img src="_images/vim-help.png" alt="Ajuda">
+
+						<aside class="notes">
+							... até porque tem bastante referencia de dos comandos
+							por aí.
+						</aside>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Por que entender VIM?</h2>
+
+						<ul>
+							<li>Ubiquidade</li>
+						</ul>
+
+						<aside class="notes">
+							VIM está em todo lugar. E mesmo que não seja usado
+							o VIM de verdade, vários editores tem extensões
+							para funcionar da forma que o VIM trabalha.
+
+							E embora alguns possam dizer que programadores não
+							precisam digitar rápido -- que eu concordo -- existe
+							a questão de que só existem duas constantes no universo:
+							a mudança e o fato de que quando tu conseguer ver
+							mentalmente todas as alterações que tem que ser feitas
+							para corrigir aquele bug infernal, alguém vai vir te
+							interromper. Então tu precisa concluir as tarefas da
+							forma mais rápida possível.
+						</aside>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>O que é o VIM?</h2>
+
+						<ul>
+							<li>Editor modal.</li>
+							<li>Editor com comandos de composição.</li>
+							<li>(Extensível)</li>
+						</ul>
+
+						<aside class="notes">
+							Primeiro, o VIM tem modos de edição. Mais sobre isso a seguir.
+
+							Segundo, VIM tem comandos de composição. O que isso quer dizer?
+							Que tu pode compor novos comando usando o que o editor oferece.
+							Pode parecer como uma extensão, só que ao invés de fazer isso
+							por código, tu faz isso por meio dos próprios comandos do editor.
+							(Essa é a parte da gramática)
+
+							Terceiro, em menor nível, VIM tem suporte à extensões como
+							qualquer outro editor.
+						<aside>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Modos</h2>
+					</section>
+
+					<section>
+						<h2>Modos: Normal</h2>
+
+						<img src="_images/normal12.jpg" alt="">
+
+						<aside class="notes">
+							O modo normal é o modo padrão do VIM. É nesse modo que ele começa e
+							é nesse modo que está a gramática que eu vou falar.
+						</aside>
+					</section>
+
+					<section>
+						<h2>Modos: Ex</h2>
+
+						<img src="_images/182.gif" alt="">
+
+						<aside class="notes">
+							O modo ex é um modo de compatibilidade com o EX, que trabalha
+							por linhas. Uma apresentação inteira poderia ser feita apenas
+							com os comandos desse modo.
+
+							... e também há alguma sobreposicão dos comandos do modo ex
+							com os comandos do modo normal. Mas, de novo, isso é coisa
+							para outra apresentação.
+						</aside>
+					</section>
+
+					<section>
+						<h2>Modos: Insert</h2>
+
+						<img src="_images/broken-gif-Andy-Samberg.gif" alt="">
+
+						<aside class="notes">
+							O modo de inserção é o modo em que as coisas que tu
+							digita realmente aparecem no texto.
+						</aside>
 					</section>
 				</section>
 
@@ -221,6 +328,11 @@
 						<p>Artigos são, de forma básica, modificadores de substantivos.</p>
 
 						<p>Por exemplo: "<u>Uma</u> apresentação"</p>
+
+						<p class="fragment">
+							ou...
+							"DUAS palavras"
+						</p>
 					</section>
 
 					<section>
@@ -232,7 +344,26 @@
 
 				<section>
 					<section>
-						<h2>Botando tudo junto</h2>
+						<h2>Lista de verbos mais usados:</h2>
+
+						<ul>
+							<li>"Delete" (apagar) (<code>d</code>)</li>
+							<li>"Change" (alterar) (<code>c</code>)</li>
+							<li>"Find" (encontrar) (<code>f</code>)</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Lista de substantivos mais usados:</h2>
+
+						<ul>
+							<li>"Word" (palavra) (<code>w</code>)</li>
+							<li>"End" (fim [da palavra]) (<code>e</code>)</li>
+						</ul>
+					</section>
+
+					<section>
+						<h2>Lista de </h2>
 					</section>
 				</section>
             </div>
