You know, explaining the nouns actually makes more sense

--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -277,12 +277,55 @@
 					</section>
 
 					<section>
-						<h2>Pequena Pausa:</h2>
+						<h2>Substantivos: Exemplos</h2>
 
-						<p>O que esses dois "substantivos" fazem?</p>
+						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
 
-						<p class="fragment">Movem o cursor para o começo próxima palavra ou para o fim
-						da palavra atual (e depois para o final da próxima).</p>
+						<p>
+							<strong><code>w</code></strong> (next word)
+						</p>
+
+						<p class="fragment">
+							<code>palavra palavra <span class="cursor">p</span>alavra</code>
+						</p>
+					</section>
+
+					<section>
+						<h2>Substantivos: Exemplos</h2>
+
+						<p><code>palavra pal<span class="cursor">a</span>vra palavra</code></p>
+
+						<p>
+							<strong><code>w</code></strong>
+						</p>
+
+						<p class="fragment">
+							<code>palavra palavra <span class="cursor">p</span>alavra</code>
+						</p>
+					</section>
+
+					<section>
+						<h2>Substantivos: Exemplos</h2>
+
+						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
+
+						<p>
+							<strong><code>e</code></strong> (end of word)
+						</p>
+
+						<p class='fragment'><code>palavra palavr<span class="cursor">a</span> palavra</code></p>
+					</section>
+
+					<section>
+						<h2>Substantivos: Exemplos</h2>
+
+						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
+
+						<p>
+							<strong><code>b</code></strong> (backwards word)
+						</p>
+
+						<p class='fragment'><code><span class="cursor">p</span>alavra palavra palavra</code></p>
 					</section>
 				</section>
 
