--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -373,6 +373,32 @@
 
 						<p class="fragment"><small>(E ainda entram os artigos...)</small></p>
 					</section>
+
+					<section>
+						<h2>Verbos: Exemplos</h2>
+						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
+
+						<p>
+							<strong><code>d</code></strong>
+						</p>
+					</section>
+
+					<section>
+						<img src="_images/anticipating.jpg" alt=""/>
+					</section>
+
+
+					<section>
+						<h2>Verbos: Exemplos</h2>
+						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
+
+						<p>
+							<strong><code>dw</code></strong> (apague palavra)
+						</p>
+
+						<p><code>palavra <span class="cursor">p</span>alavra</code></p>
+					</section>
+
 				</section>
 
 				<section>
