going into articles

--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -282,7 +282,7 @@
 						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
 
 						<p>
-							<strong><code>w</code></strong> (next word)
+							<strong><code>w</code></strong> (<i>next</i> word)
 						</p>
 
 						<p class="fragment">
@@ -420,6 +420,32 @@
 
 						<p>O VIM modifica o significado de artigos um pouco.</p>
 					</section>
+
+					<section>
+						<h2>Artigos: Exemplo</h2>
+
+						<h2>Verbos: Exemplos</h2>
+						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
+
+						<p>
+							<strong><code>dw</code></strong> (apague palavra)
+						</p>
+
+						<p><code>palavra <span class="cursor">p</span>alavra</code></p>
+					</section>
+
+					<section>
+						<h2>Artigos: Exemplo</h2>
+
+						<h2>Verbos: Exemplos</h2>
+						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
+
+						<p>
+							<strong><code>d2w</code></strong> (apague DUAS palavras)
+						</p>
+
+						<p class="fragment"><code>palavra<span class="cursor">&nbsp;</span></code></p>
+					</section>
 				</section>
 
 				<section>
@@ -451,87 +477,52 @@
 							<li>"Around" (ao redor) (<code>a</code>)</li>
 						</ul>
 					</section>
-				</section>
 
-				<section>
-					<img src="_images/snorefest.jpg" alt="">
-				</section>
-
-				<section>
 					<section>
-						<p>
-							<code>palavra1 <span class="cursor">p</span>alavra2 palavra3</code>
-						</p>
+						<img src="_images/record-scratch.jpg" alt=""/>
+					</section>
+
+					<section>
+						<h2>Inside: Exemplo</h2>
+
+						<p><code>def func(param1, <span class="cursor">p</span>aram2, param3):</code></p>
 
 						<p>
-							<code>dw</code>
+							<strong><code>di)</code></strong>
 						</p>
 
 						<p class="fragment">
-							<code>palavra1 palavra3</code>
+							<code>def func(<span class="cursor">)</span>:</code></p>
 						</p>
 					</section>
 
 					<section>
-						<p>
-							<code>palavra1 <span class="cursor">p</span>alavra2 palavra3</code>
-						</p>
+						<h2>Inside: Exemplos</h2>
+
+						<p><code>palavra pal<span class="cursor">a</span>vra palavra</code></p>
 
 						<p>
-							<code>d2w</code> 
-							<span>(apague duas palavras)</span>
+							<strong><code>dw</code></strong>
 						</p>
 
 						<p class="fragment">
-							<code>palavra1</code>
+							<code>palavra pal<span class="cursor">p</span>alavra</code>
 						</p>
 					</section>
 
 					<section>
-						<p>
-							<code>palavra1 pal<span class="cursor">a</span>vra2 palavra3</code>
-						</p>
+						<h2>Inside: Exemplos</h2>
+
+						<p><code>palavra pal<span class="cursor">a</span>vra palavra</code></p>
 
 						<p>
-							<code>d2w</code> 
-							<span class="fragment">(apague duas palavras)</span>
+							<strong><code>diw</code></strong>
 						</p>
 
 						<p class="fragment">
-							<code>palavra1 palpalavra3</code>
+							<code>palavra&nbsp;<span class="cursor">&nbsp;</span>palavra</code>
 						</p>
 					</section>
-
-					<section>
-						<p>
-							<code>def func(param1, <span class="cursor">p</span>aram2, param3):</code>
-						</p>
-
-						<p>
-							<code>cf)</code>
-							<span class="fragment">Altere até encontrar um ")"</span>
-						</p>
-
-						<p class="fragment">
-							<code>def func(param1, <span class="cursor">:</span></code>
-
-							<p class="fragment">E já está em modo de inserção.</p>
-						</p>
-					</section>
-
-					<section>
-						<p>
-							<code>def func(param1, <span class="cursor">p</span>aram2, param3):</code>
-						</p>
-
-						<p>
-							<code>ct)</code>
-							<span class="fragment">Altere até antes de encontrar um ")"</span>
-						</p>
-
-						<p class="fragment">
-							<code>def func(param1, <span class="cursor">)</span>:</code>
-						</p>
 				</section>
             </div>
         </div>
